--- a/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/QuanTriVien/ChamDiem.cshtml
+++ b/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/QuanTriVien/ChamDiem.cshtml
@@ -29,7 +29,7 @@
             }
             else
             {
-                    <div style="width: 100%; margin-top: 10px; background-color: #f2f2f2; color:white; text-align: center; padding: 4px 0;" class="text-muted">Không có bài tập nào chưa chấm hoặc được nộp</div>
+                    <div style="width: 100%; margin-top: 10px; background-color: #f2f2f2; color:white; text-align: center; padding: 4px 0;" class="text-muted">Không có bài tập nào đã được chấm</div>
             }
         </div>
     </div>
