--- a/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/QuanTriVien/ThongTinLopHoc.cshtml
+++ b/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/QuanTriVien/ThongTinLopHoc.cshtml
@@ -142,7 +142,7 @@
                 </div>
                 <div class="d-flex justify-content-end gap-2 mt-4">
                     <button id="btnSua" type="button" class="btn btn-primary">Sửa</button>
-                    <button id="btnLuu" type="submit" class="btn btn-success">Lưu</button>
+                    <button id="btnLuu" disabled type="submit" class="btn btn-success">Lưu</button>
                 </div>
             }
         </div>
