--- a/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/QuanTriVien/ChiTietBaiTap.cshtml
+++ b/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/QuanTriVien/ChiTietBaiTap.cshtml
@@ -43,12 +43,6 @@
         </div>
         <div class="d-flex justify-content-between">
             <h1 style="font-size: 22px; font-weight: 600; color: #000; margin-top: 20px; display: block">Thông tin bài tập khóa học</h1>
-            @if (TempData["ErrorMessageBaiTap"] != null)
-            {
-                <div class="alert alert-danger">
-                    @TempData["ErrorMessageBaiTap"]
-                </div>
-            }
             <div>
                 <a href="/QuanTriVien/DanhSachBaiTapThuocKhoaHoc?maBT=@Model.MaBaiTap" class="btn btn-primary">Xem danh sách khóa học sử dụng</a>
                 <a href="/QuanTriVien/XoaBaiTap?maBT=@Model.MaBaiTap" class="btn btn-danger" id="btnXoaKhoaHoc" data-makh="@Model.MaBaiTap">
@@ -95,15 +89,8 @@
                     </div>
                     <div style="margin-top: 15px; width: 100%">
                         @Html.TextBoxFor(model => model.FileUpload, new { @style = "display: none;", @value = @Model.FileUpload, @id = "Avatar", @type = "file", @class = "form-control my-2" })
-                        @if (!string.IsNullOrEmpty(Model.FileUpload))
-                        {
-                            <iframe id="avatarPreview" src="@Url.Content("~/Content/HinhAnh/BaiTap/" + Model.FileUpload)" width="100%" height="600px" style="border: 1px solid #ddd;"></iframe>
-                        }
-                        else
-                        {
-                            <p class="text-muted">Không có tệp bài tập nào được tải lên.</p>
-                        }
-                        <label for="Avatar" id="label" class="custom-file-upload mt-2" style="pointer-events: none;cursor: not-allowed; width: 150px; text-align: center; padding: 10px 12px; background-color: #0077b6; color: white; border-radius: 5px;">
+                        <iframe id="avatarPreview" src="~/Content/HinhAnh/BaiTap/@Model.FileUpload" width="100%" height="600px" style="border: 1px solid #ddd;"></iframe>
+                        <label for="Avatar" id="label" class="custom-file-upload mt-2" style="opacity: 0.5; pointer-events: none;cursor: not-allowed; width: 150px; text-align: center; padding: 10px 12px; background-color: #0077b6; color: white; border-radius: 5px;">
                             Chọn tập tin
                         </label>
                     </div>
@@ -114,5 +101,11 @@
                 </div>
             </form>
         </div>
+        @if (TempData["ErrorMessageBaiTap"] != null)
+        {
+            <div class="mt-2 alert alert-danger">
+                @TempData["ErrorMessageBaiTap"]
+            </div>
+        }
     </div>
 </div>
