--- a/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/QuanTriVien/ChiTietTaiLieu.cshtml
+++ b/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/QuanTriVien/ChiTietTaiLieu.cshtml
@@ -42,12 +42,6 @@
         </div>
         <div class="d-flex justify-content-between">
             <h1 style="font-size: 22px; font-weight: 600; color: #000; margin-top: 20px; display: block">Thông tin tài liệu khóa học</h1>
-            @if (TempData["ErrorMessageTaiLieu"] != null)
-            {
-                <div class="alert alert-danger">
-                    @TempData["ErrorMessageTaiLieu"]
-                </div>
-            }
             <div>
                 <a href="/QuanTriVien/DanhSachTaiLieuThuocKhoaHoc?maTL=@Model.MaTaiLieu" class="btn btn-primary">Xem danh sách khóa học sử dụng</a>
                 <a href="/QuanTriVien/XoaTaiLieu?maTL=@Model.MaTaiLieu" class="btn btn-danger" id="btnXoaKhoaHoc" data-makh="@Model.MaTaiLieu">
@@ -65,7 +59,7 @@
                         </div>
                         <div style="width: 100%">
                             <label style="font-size: 15px; color: #374151; font-weight: 500;" for="TenKhoaHoc">Tên tài liệu: </label>
-                            @Html.TextBoxFor(model => model.TenTaiLieu, new { @readonly = "readonly", @id = "TenKhoaHoc", @class = "form-control mt-2", placeholder = "Nhập tên loại" })  
+                            @Html.TextBoxFor(model => model.TenTaiLieu, new { @readonly = "readonly", @id = "TenKhoaHoc", @class = "form-control mt-2", placeholder = "Nhập tên loại" })
                         </div>
                     </div>
                     <div style="margin-top: 15px; width: 100%">
@@ -94,17 +88,11 @@
                     </div>
                     <div style="margin-top: 15px; width: 100%">
                         @Html.TextBoxFor(model => model.FileUpload, new { @style = "display: none;", @value = @Model.FileUpload, @id = "Avatar", @type = "file", @class = "form-control my-2" })
-                        @if (string.IsNullOrEmpty(Model.FileUpload))
-                        {
-                            <p class="text-muted">Không có tệp bài tập nào được tải lên.</p>
-                        } else
-                        {
-                            <iframe id="avatarPreview" src="@Url.Content("~/Content/HinhAnh/TaiLieu/" + Model.FileUpload)"  width="100%" height="600px" style="border: 1px solid #ddd;"></iframe>
-                        }
-                        <label for="Avatar" id="label" class="custom-file-upload mt-2" style="pointer-events: none;cursor: not-allowed; width: 150px; text-align: center; padding: 10px 12px; background-color: #0077b6; color: white; border-radius: 5px;">
+                        <iframe id="avatarPreview" src="~/Content/HinhAnh/TaiLieu/@Model.FileUpload" width="100%" height="600px" style="border: 1px solid #ddd;"></iframe>
+                        <label for="Avatar" id="label" class="custom-file-upload mt-2" style="opacity: 0.5; pointer-events: none; cursor: not-allowed; width: 150px; text-align: center; padding: 10px 12px; background-color: #0077b6; color: white; border-radius: 5px;">
                             Chọn tập tin
                         </label>
-                    </div>   
+                    </div>
                 </div>
                 <div style="margin-top: 10px; width: 100%" class="d-flex justify-content-end gap-2">
                     <button id="btnSua" type="button" class="btn btn-primary">Sửa</button>
@@ -112,5 +100,11 @@
                 </div>
             </form>
         </div>
+        @if (TempData["ErrorMessageTaiLieu"] != null)
+        {
+            <div class="mt-2 alert alert-danger">
+                @TempData["ErrorMessageTaiLieu"]
+            </div>
+        }
     </div>
 </div>
