--- a/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/QuanTriVien/ThemBaiTap.cshtml
+++ b/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/QuanTriVien/ThemBaiTap.cshtml
@@ -73,7 +73,7 @@
                 <div>
                     @if (TempData["ErrorMessage"] != null)
                     {
-                        <div class="alert alert-danger">
+                        <div class="mt-2 alert alert-danger">
                             @TempData["ErrorMessage"]
                         </div>
                     }
