--- a/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/Shared/_LayoutGiangVien.cshtml
+++ b/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/Shared/_LayoutGiangVien.cshtml
@@ -42,10 +42,10 @@
                             <img width="24" height="24" src="~/Content/HinhAnh/GiaoDien/user.png" class="me-2" alt="User Avatar" />
                             <span>@user.HoTen</span>
                         </a>
-                        <ul style="list-style-type: none;" id="dropdownMenu">
-                            <li><a class="dropdown-item" href="/GiangVien/ThongTinNguoiDung">Thông tin cá nhân</a></li>
-                            <li><a class="dropdown-item text-danger" href="/GiangVien/DangXuat">Đăng xuất</a></li>
-                        </ul>
+                        <div id="dropdownMenu">
+                            <div><a class="dropdown-item" href="/GiangVien/ThongTinNguoiDung">Thông tin cá nhân</a></div>
+                            <div><a class="dropdown-item text-danger" href="/GiangVien/DangXuat">Đăng xuất</a></div>
+                        </div>
                     </div>
                 }
                 else
