fix mã giảm giá

--- a/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/QuanTriVien/DanhSachMaGiamGIa.cshtml
+++ b/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/QuanTriVien/DanhSachMaGiamGIa.cshtml
@@ -60,7 +60,7 @@
                     <div style="display: flex; width: 100%">
                         <span style="flex: 1" class="item">@user.MaGiamGia</span>
                         <span style="flex: 1" class="item">@user.TenGiamGia</span>
-                        <span style="flex: 1" class="item">@user.TiLeGiam</span>
+                        <span style="flex: 1" class="item">@user.TiLeGiam.ToString("0.#") %</span>
                         <span style="flex: 1" class="item">
                             @if (user.TrangThai == "Đang hoạt động")
                             {
