fix tai lieu bai tap upload file - thuan

--- a/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/Error/NotFound.cshtml
+++ b/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/Error/NotFound.cshtml
@@ -4,8 +4,8 @@
 }
 
 <div style="height: 100%; display: flex; justify-content: center; align-items: center; flex-direction: column">
-    <h1 style="font-size: 24px ;color: red; font-weight: 500">404</h1>
-    <h2 style="color: red;">Không tìm thấy trang!</h2>
+    <h1 style="font-size: 36px; color: red; font-weight: 500; padding: 8px 0;">404</h1>
+    <h2 style="color: red; padding: 0px 0 8px; font-size: 18px;">Không tìm thấy trang!</h2>
     <p>
         Xin lỗi, không tìm thấy trang web của bạn!
     </p>
