--- a/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/QuanTriVien/ThemTaiLieu.cshtml
+++ b/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/QuanTriVien/ThemTaiLieu.cshtml
@@ -44,7 +44,7 @@
             <h1 style="font-size: 22px; font-weight: 600; color: #000; margin-top: 20px; display: block">Thêm tài liệu khóa học</h1>
         </div>
         <div style="background-color: #fff; border-radius: 5px; width: 100%; margin-top: 10px; padding: 16px; border: 1px solid #dadada; width: 100%;">
-            <form class="myForm" action="/QuanTriVien/ThemTaiLieu" method="post">
+            <form class="myForm" action="/QuanTriVien/ThemTaiLieu" method="post" enctype="multipart/form-data">
                 <div style="width: 100%;">
                     <div class="d-flex justify-content-between gap-4">
                         <div style="width: 100%">
