--- a/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/QuanTriVien/ChiTietBaiTap.cshtml
+++ b/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/QuanTriVien/ChiTietBaiTap.cshtml
@@ -51,7 +51,7 @@
             </div>
         </div>
         <div style="background-color: #fff; border-radius: 5px; width: 100%; margin-top: 10px; padding: 16px; border: 1px solid #dadada; width: 100%;">
-            <form class="myForm" action="/QuanTriVien/ChiTietBaiTap" method="post">
+            <form class="myForm" action="/QuanTriVien/ChiTietBaiTap" method="post" enctype="multipart/form-data">
                 <div style="width: 100%;">
                     <div class="d-flex justify-content-between gap-4">
                         <div style="width: 100%">
