--- a/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/QuanTriVien/DanhSachPhongHoc.cshtml
+++ b/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/QuanTriVien/DanhSachPhongHoc.cshtml
@@ -118,17 +118,14 @@
                     Sau
                 </a>
             </div>
-
-            <div style="color: red;" class="mt-2">
-                <div>
-                    @if (TempData["ErrorMessagePhongHoc"] != null)
-                    {
-                        <div class="alert alert-danger">
-                            @TempData["ErrorMessagePhongHoc"]
-                        </div>
-                    }
-                </div>
-            </div>
         </div>
+        <div>
+            @if (TempData["ErrorMessagePhongHoc"] != null)
+            {
+                <div class="mt-2 alert alert-danger">
+                        @TempData["ErrorMessagePhongHoc"]
+                </div>
+            }
+        </div>   
     </div>
 </div>
