--- a/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/QuanTriVien/Error.cshtml
+++ b/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/QuanTriVien/Error.cshtml
@@ -4,8 +4,8 @@
 }
 
 <div style="height: 100%; display: flex; justify-content: center; align-items: center; flex-direction: column">
-    <h1 style="font-size: 24px; color: red; font-weight: 500">403</h1>
-    <h2 style="color: red;">Cấm!</h2>
+    <h1 style="font-size: 36px; color: red; font-weight: 500; padding: 8px 0;">403</h1>
+    <h2 style="color: red; padding: 0px 0 8px; font-size: 18px;">Cấm!</h2>
     <p>
         Xin lỗi, bạn không đủ quyền truy cập vào trang này!
     </p>
