--- a/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/QuanTriVien/DanhSachLichHoc.cshtml
+++ b/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/QuanTriVien/DanhSachLichHoc.cshtml
@@ -2,6 +2,7 @@
 
 
 <div class="mt-4">
+    <h2 class="text-center mb-4" style="font-size: 22px; font-weight: 500;">Lịch học lớp học</h2>
     <table class="table table-bordered table-hover shadow-sm mt-3">
         <thead class="table-light">
             <tr>
