--- a/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/QuanTriVien/HocVien.cshtml
+++ b/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/QuanTriVien/HocVien.cshtml
@@ -47,12 +47,12 @@
                 Thêm học viên
             </a>
         </div>
-            <form method="get" action="/QuanTriVien/TimKiemHocVien" class="input-group mt-2" style="width: 75%; position: relative;">
-                <input type="search" name="search" style="outline: none; width: 80%; padding: 8px; padding-left: 12px; border: 2px solid #0d6efd; border-top-left-radius: 5px; border-bottom-left-radius: 5px" placeholder="Tìm kiếm theo họ tên...">
-                <button type="submit" class="btn btn-outline-secondary" style="padding: 8px 12px; background-color: #0d6efd; border-radius: 5px; border: 2px solid #0d6efd; border-top-left-radius: 0px; border-bottom-left-radius: 0px;" type="button">
-                    <i style="color: white;" class="fa-solid fa-magnifying-glass"></i>
-                </button>
-            </form>
+        <form method="get" action="/QuanTriVien/TimKiemHocVien" class="input-group mt-2" style="width: 75%; position: relative;">
+            <input type="search" name="search" style="outline: none; width: 80%; padding: 8px; padding-left: 12px; border: 2px solid #0d6efd; border-top-left-radius: 5px; border-bottom-left-radius: 5px" placeholder="Tìm kiếm theo họ tên...">
+            <button type="submit" class="btn btn-outline-secondary" style="padding: 8px 12px; background-color: #0d6efd; border-radius: 5px; border: 2px solid #0d6efd; border-top-left-radius: 0px; border-bottom-left-radius: 0px;" type="button">
+                <i style="color: white;" class="fa-solid fa-magnifying-glass"></i>
+            </button>
+        </form>
         <div style="background-color: #fff; border-radius: 5px; width: 100%; margin-top: 20px; padding: 16px; border: 1px solid #dadada; border-radius: 5px;">
             <div style="display:flex; border-bottom: 1px solid #dadada">
                 <span class="col-md-2" style="text-align: center; padding: 10px 8px; color: #7f7f7f; font-weight: 500; ">Mã học viên</span>
@@ -126,6 +126,14 @@
                     Sau
                 </a>
             </div>
+        </div>
+        <div>
+            @if (TempData["ErrorMessageHocVien"] != null)
+            {
+                <div class="mt-2 alert alert-danger">
+                    @TempData["ErrorMessageHocVien"]
+                </div>
+            }
         </div>
     </div>
 </div>
