--- a/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/QuanTriVien/XacNhanThanhToan.cshtml
+++ b/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/QuanTriVien/XacNhanThanhToan.cshtml
@@ -6,9 +6,9 @@
 }
 <div style="padding: 8px 20px;">
     <h2 style="margin-top: 46px;" class="mb-2 fw-bold h2 text-center">Xác Nhận Thanh Toán</h2>
-    <form action="/QuanTriVien/TienHanhThanhToan" method="post" enctype="multipart/form-data">
+    <form action="/QuanTriVien/TienHanhThanhToan" method="post" enctype="multipart/form-data" >
         <div class="mt-5">
-            <fieldset class="border p-4">
+            <fieldset class="border p-4" style="background-color: white; border-radius: 5px;">
                 <legend class="w-auto mb-2" style="font-weight: 500;">Thông Tin Thanh Toán</legend>
 
                 <!-- Mã Học Viên -->
@@ -29,16 +29,6 @@
                     <input type="text" class="form-control" id="HinhThuc" name="HinhThuc" value="@Model.HinhThuc" />
                 </div>
 
-                <!-- Ảnh Hóa Đơn -->
-                <div class="mb-3">
-                    <label for="AnhHoaDon" class="form-label">Ảnh Hóa Đơn</label>
-                    <input type="file" class="form-control" id="AnhHoaDon" name="AnhHoaDon" />
-
-                    <div id="imagePreview" class="mt-3">
-                        <img id="preview" src="#" alt="Image Preview" style="max-width: 100%; display: none;" />
-                    </div>
-                </div>
-
                 <!-- Nút Submit -->
                 <div class="text-center">
                     <a href="/QuanTriVien/HuyThanhToan" class="btn btn-danger">Huỷ</a>
@@ -46,7 +36,17 @@
                 </div>
             </fieldset>
         </div>
-    </form>    
+    </form>
+    <div style="color: red;" class="mt-2">
+        <div>
+            @if (TempData["ErrorMessage"] != null)
+            {
+                <div class="alert alert-danger">
+                    @TempData["ErrorMessage"]
+                </div>
+            }
+        </div>
+    </div>
 </div>
 
 
