--- a/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/Shared/_LayoutHocVien.cshtml
+++ b/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/Shared/_LayoutHocVien.cshtml
@@ -117,7 +117,7 @@
                             <li><a class="dropdown-item" href="/HocVien/ThongTinNguoiDung">Tài khoản của tôi</a></li>
                             
                             <li><hr class="dropdown-divider"></li>
-                            <li><a class="dropdown-item text-danger" href="@Url.Action("DangXuat", "HocVien")">Log Out</a></li>
+                            <li><a class="dropdown-item text-danger" href="@Url.Action("DangXuat", "HocVien")">Đăng xuất</a></li>
                         </ul>
                     </li>
                 </ul>
