--- a/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/QuanTriVien/TaoDangKy.cshtml
+++ b/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/QuanTriVien/TaoDangKy.cshtml
@@ -10,7 +10,7 @@
 <div style="padding: 8px 20px;" class=" mt-5">
     <h2 class="mb-4 fw-bold h2 text-center">Tạo Đăng Ký</h2>
 
-    <form id="dangKyForm" method="post">
+    <form id="dangKyForm" method="post" style="background-color: white; padding: 12px 20px; border: 1px solid #d2d2d2; border-radius: 5px;">
         <!-- Chọn Khóa Học -->
         <div class="form-group mb-3">
             <label class="mb-2" for="khoaHoc">Chọn Khóa Học:</label>
@@ -61,13 +61,13 @@
     <table class="table table-striped table-bordered">
         <thead>
             <tr>
-                <th>STT</th>
-                <th>Khóa Học</th>
-                <th>Lớp Học</th>
-                <th>Giảm Giá</th>
-                <th>Tiền Gốc</th>
-                <th>Giảm Giá</th>
-                <th>Thực Trả</th>
+                <th style="text-align: center">STT</th>
+                <th style="text-align: center">Khóa Học</th>
+                <th style="text-align: center">Lớp Học</th>
+                <th style="text-align: center">Giảm Giá</th>
+                <th style="text-align: center">Tiền Gốc</th>
+                <th style="text-align: center">Giảm Giá</th>
+                <th style="text-align: center">Thực Trả</th>
             </tr>
         </thead>
         <tbody>
@@ -80,12 +80,12 @@
                     foreach (DangKy dangKy in danhSachDangKy)
                     {
                         <tr>
-                            <td>@index</td>
-                            <td>@dangKy.LopHoc.KhoaHoc.TenKhoaHoc</td>
-                            <td>@dangKy.LopHoc.TenLop</td>
-                            <td>@dangKy.GiamGia.TiLeGiam %</td>
-                            <td>@dangKy.SoTien VND</td>
-                            <td>@dangKy.ThucTra VND</td>
+                            <td style="text-align: center">@index</td>
+                            <td style="text-align: center">@dangKy.LopHoc.KhoaHoc.TenKhoaHoc</td>
+                            <td style="text-align: center">@dangKy.LopHoc.TenLop</td>
+                            <td style="text-align: center">@dangKy.GiamGia.TiLeGiam %</td>
+                            <td style="text-align: center">@dangKy.SoTien VND</td>
+                            <td style="text-align: center">@dangKy.ThucTra VND</td>
                         </tr>
                         index++;
                     }
@@ -214,13 +214,13 @@
 
                             $('tbody').append(
                                 '<tr>' +
-                                    '<td>' + item.STT + '</td>' +  // Sử dụng STT từ response
-                                    '<td>' + item.KhoaHoc + '</td>' +  // Tên Khóa Học
-                                    '<td>' + item.LopHoc + '</td>' +  // Tên Lớp Học
-                                    '<td>' + item.GiamGia + '%</td>' +  // Tỉ lệ Giảm Giá
-                                    '<td>' + item.SoTien + ' VND</td>' +  // Số Tiền
-                                    '<td>' + item.Giam + ' VND</td>' +  // Số tien giam
-                                    '<td>' + item.ThucTra + ' VND</td>' +  // Thực Trả
+                                    '<td style="text-align: center">' + item.STT + '</td>' +  // Sử dụng STT từ response
+                                    '<td style="text-align: center">' + item.KhoaHoc + '</td>' +  // Tên Khóa Học
+                                    '<td style="text-align: center">' + item.LopHoc + '</td>' +  // Tên Lớp Học
+                                    '<td style="text-align: center">' + item.GiamGia + '%</td>' +  // Tỉ lệ Giảm Giá
+                                    '<td style="text-align: center">' + item.SoTien + ' VND</td>' +  // Số Tiền
+                                    '<td style="text-align: center">' + item.Giam + ' VND</td>' +  // Số tien giam
+                                    '<td style="text-align: center">' + item.ThucTra + ' VND</td>' +  // Thực Trả
                                 '</tr>'
                             );
                         });
