--- a/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/Shared/_LayoutGiangVien.cshtml
+++ b/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/Shared/_LayoutGiangVien.cshtml
@@ -16,9 +16,10 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.5.0/font/bootstrap-icons.min.css">
     <script src="~/Content/bootstrap-5.0.2-dist/js/bootstrap.min.js"></script>
     <script src="~/Content/tinymce/js/tinymce/tinymce.min.js"></script>
-
 </head>
 <body>
     <div class="container-fluid m-0 p-0">
