--- a/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/HocVien/LopHocCuaToi.cshtml
+++ b/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/HocVien/LopHocCuaToi.cshtml
@@ -25,7 +25,7 @@
                     <a href="@Url.Action("LopHoc", "HocVien", new { id = item.MaLop })" class="text-decoration-none text-dark">
                         <div class="card h-100 shadow-sm">
                             <!-- Hình ảnh đại diện -->
-                            <img src="~/Content/HinhAnh/Avatar/avt3.jfif"
+                            <img src="~/Content/HinhAnh/GiaoDien/yola-english-high-resolution-logo.png"
                                  class="card-img-top" alt="Ảnh lớp học" style="height: 150px; object-fit: cover;">
                             <div class="card-body">
                                 <!-- Tên lớp học -->
