--- a/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/QuanTriVien/DanhSachLopHoc.cshtml
+++ b/QL_TrungTamAnhNgu/QL_TrungTamAnhNgu/Views/QuanTriVien/DanhSachLopHoc.cshtml
@@ -42,42 +42,40 @@
             @if (ViewBag.TrangThaiTamNgung != null)
             {
                 <span style="color:red;">@ViewBag.TrangThaiTamNgung</span>
-                 <a  href="/QuanTriVien/ThemLopHoc?makh=@ViewBag.MaKhoaHoc" class=" btn btn-primary" style="font-size: 16px; pointer-events: none;">
+                <a href="/QuanTriVien/ThemLopHoc?makh=@ViewBag.MaKhoaHoc" class=" btn btn-primary" style="font-size: 16px; pointer-events: none;">
                     Thêm lớp học
-                </a>   
+                </a>
             }
             else
             {
                 <a href="/QuanTriVien/ThemLopHoc?makh=@ViewBag.MaKhoaHoc" class="btn btn-primary" style="font-size: 16px;">
                     Thêm lớp học
-                </a>                
+                </a>
             }
         </div>
-        <div style="background-color: #fff; border-radius: 5px; width: 100%; margin-top: 10px; padding: 16px; border: 1px solid #dadada; width: 100%;">
-            <div class="row g-4">
-                @foreach (var item in Model)
-                {
-                    <div class="col-3" style="border-radius: 10px;">
-                        <img src="~/Content/HinhAnh/KhoaHoc/@item.KhoaHoc.AnhBia" alt="@item.TenLop" style="display: block ; width: 100%; height: 150px; border-top-left-radius: 5px; border-top-right-radius: 5px; " />
-                        <div style="padding: 8px 12px 0; height: 190px; border-bottom-left-radius: 5px; border-bottom-right-radius: 5px; border: 1px solid #dadada; background-color: #fff;">
-                            <span style="font-size: 16px; font-weight: 500;">@item.TenLop</span>
-                                @*<span style="font-size: 14px; display: block; margin-top: 15px; color: #7f7f7f; ">Giảng viên: @item.GiangVien.HoTen</span>*@
-                            <span style="font-size: 14px; display: block; margin: 20px 0;">
-                                Trạng thái:
-                                <span style="padding: 4px 12px; background-color: #248823; color: #fff; border-radius: 20px; font-size: 12px;">@item.TrangThai</span>
-                                <span style=" margin-top: 15px; display: block; font-size: 14px; font-weight: 400; color: #343a40">Khóa hoc: @item.KhoaHoc.TenKhoaHoc</span>
-                                <span style="font-size: 15px; display: block;  margin-top: 15px; font-weight: 500; color: #ff0000; ">
-                                    Người dạy: @String.Format("{0:N0}", item.GiangVien.HoTen)
-                                </span>
+        <div class="row gap-2" style=" border-radius: 5px; width: 100%; margin-top: 10px; background-color: white; width: 100%;">
+            @foreach (var item in Model)
+            {
+                <div style="width: 25%; flex-wrap: wrap;  border-radius: 10px; border: 1px solid #d2d2d2 ; background-color: white; padding: 0 12px 0;">
+                    <img src="~/Content/HinhAnh/GiaoDien/yola-english-high-resolution-logo.png" alt="@item.TenLop" style="display: block ; width: 100%; height: 150px;" />
+                    <div style="height: 190px; background-color: #fff;">
+                        <span style="font-size: 16px; font-weight: 500;">@item.TenLop</span>
+                        @*<span style="font-size: 14px; display: block; margin-top: 15px; color: #7f7f7f; ">Giảng viên: @item.GiangVien.HoTen</span>*@
+                        <span style="font-size: 14px; display: block; margin: 20px 0;">
+                            Trạng thái:
+                            <span style="padding: 4px 12px; background-color: #248823; color: #fff; border-radius: 20px; font-size: 12px;">@item.TrangThai</span>
+                            <span style=" margin-top: 15px; display: block; font-size: 14px; font-weight: 400; color: #343a40">Khóa hoc: @item.KhoaHoc.TenKhoaHoc</span>
+                            <span style="font-size: 15px; display: block;  margin-top: 15px; font-weight: 500; color: #ff0000; ">
+                                Người dạy: @String.Format("{0:N0}", item.GiangVien.HoTen)
                             </span>
-                            <div class="d-flex justify-content-end">
-                                <a href="/QuanTriVien/XoaLopHoc?malop=@item.MaLop&makh=@item.KhoaHoc.MaKhoaHoc" class="btn btn-danger me-2">Xóa</a>
-                                <a href="/QuanTriVien/ChiTietLopHoc?malop=@item.MaLop" class="btn btn-primary">Chi tiết</a>
-                            </div>
+                        </span>
+                        <div class="d-flex justify-content-end">
+                            <a href="/QuanTriVien/XoaLopHoc?malop=@item.MaLop&makh=@item.KhoaHoc.MaKhoaHoc" class="btn btn-danger me-2">Xóa</a>
+                            <a href="/QuanTriVien/ChiTietLopHoc?malop=@item.MaLop" class="btn btn-primary">Chi tiết</a>
                         </div>
                     </div>
-                }
-            </div>
+                </div>
+            }
         </div>
         <div style="color: red;" class="mt-2">
             <div>
